[build-system]
requires = ["setuptools", "setuptools-scm"]


[project]
name = "pyplanqk"
authors = [{ name = "Henning Krause", email = "henning.krause@gft.com" }, ]
description = "A python package to interact with the PlanQK platform."
readme = "README.md"
requires-python = ">=3.10.6"
keywords = ["quantum computing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pytest>=8.0.0",
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "urllib3>=2.2.0",
    "names-generator>=0.1.0"
]
dynamic = ["version"]


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
version_file = "src/pyplanqk/version.py"


[tool.pytest.ini_options]
markers = [
    "previously_wrong: only run previously wrong tests",
    "interactive: only run tests with user interaction",
    "slow_service: only run tests wich are slow because of the service creation",
]
log_cli = true
log_cli_level = "INFO"