[build-system]
requires = ["setuptools", "setuptools-scm"]


[project]
name = "pyplanqk"
authors = [{ name = "Henning Krause", email = "henning.krause@gft.com" }, ]
maintainers  = [{ name = "Henning Krause", email = "henning.krause@gft.com" }, ]
description = "A python package to interact with the PlanQK platform."
readme = "README.md"
keywords = ["quantum", "quantum computing", "planqk"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "urllib3>=2.2.0",
    "names-generator>=0.1.0",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.10.6"
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest>=8.0.0",
]


[project.urls]
Homepage = "https://planqk.de/"


[tool.black]
line-length=121


[tool.pylint]
max-line-length=121


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
version_file = "src/pyplanqk/version.py"


[tool.pytest.ini_options]
markers = [
    "interactive: only run tests with user interaction",
    "slow_service: only run tests wich are slow because of the service creation",
    "auto: only run tests that run fully automatic",
]
log_cli = true
log_cli_level = "INFO"